--- a/lectures/intro/intro.tex
+++ b/lectures/intro/intro.tex
@@ -7,24 +7,24 @@
 	\frametitle{Välkommen}
 	\begin{itemize}
 		\item Syftet med \emph{dod}-delen?
-				\begin{itemize}
-					\item Lär dig grundläggande verktyg.
-					\item Introduktion inför kommande kurser.
-				\end{itemize}
+		      \begin{itemize}
+			      \item Lär dig grundläggande verktyg.
+			      \item Introduktion inför kommande kurser.
+		      \end{itemize}
 		\item Vem läser kursen?
 		      \begin{itemize}
-				\item C-programmet.
-				\item D-programmet. 
+			      \item C-programmet.
+			      \item D-programmet.
 		      \end{itemize}
 		\item Vad innehåller kursen?
 		      \begin{itemize}
 			      \item Fyra ämnen, med vardera en föreläsning och en laboration
-			      \begin{enumerate}
-					\item Unix och Linux
-					\item \LaTeX
-					\item Git och Github
-					\item Maskinkod
-				  \end{enumerate}
+			            \begin{enumerate}
+				            \item Unix och Linux
+				            \item \LaTeX
+				            \item Git och Github
+				            \item Maskinkod
+			            \end{enumerate}
 		      \end{itemize}
 	\end{itemize}
 \end{frame}
@@ -43,7 +43,7 @@
 		\item Föreläsning alltid samma tid (tisdag 15:15), E:A
 		\item Laborationer
 		      \begin{itemize}
-			      \item En labb per vecka, start imorgon!
+			      \item En labb per vecka, start på torsdag!
 			      \item Föreberedelseuppgifter, kontrollfrågor.
 			      \item Laboration 1, Linux (Första laborationen på torsdag!)
 			      \item Laboration 2. \LaTeX
@@ -58,26 +58,37 @@
 \begin{frame}[fragile=singleslide]
 	\frametitle{Kurshemsidan och Github}
 
-		{\bf Den öppna kurshemsidan:}
+	{\bf Den öppna kurshemsidan:}
 
-		\smallskip
-		\small\url{https://lunduniversity.github.io/pgk/}
-		
-		
-		\bigskip
-		
-		
-		{\bf Allt kursmaterial finns tillgängligt på GitHub:}
+	\smallskip
+	\small\url{https://lunduniversity.github.io/pgk/}
 
-		\smallskip
-		\small\url{https://github.com/lunduniversity/introprog-computer-intro}
-		
-		\smallskip
-		\begin{itemize}
-			\item Källkod och material för kursen.
-			\item Lämna issues om ni upptäcker problem eller vill föreslå förbättringar.
-			\item Pull requests är alltid välkomna!
-		\end{itemize}
+
+	\bigskip
+
+
+	{\bf Allt kursmaterial finns tillgängligt på GitHub:}
+
+	\smallskip
+	\small\url{https://github.com/lunduniversity/introprog-computer-intro}
+
+	\smallskip
+	\begin{itemize}
+		\item Källkod och material för kursen.
+		\item Lämna issues om ni upptäcker problem eller vill föreslå förbättringar.
+		\item Pull requests är alltid välkomna!
+	\end{itemize}
+\end{frame}
+
+\begin{frame}[fragile=singleslide]
+	\frametitle{Vid sjukdom / förhinder}
+
+	Om du blir sjuka eller får annat förhinder:
+	\begin{itemize}
+		\item Meddela mig (dod) \url{mattias.nordahl@cs.lth.se}
+		\item Meddela Björn (prog) \url{bjorn.regnell@cs.lth.se}
+		\item Få hjälp och redovisa på resurstid
+	\end{itemize}
 \end{frame}
 
 \begin{frame}[fragile=singleslide]
