--- a/lab-instructions/modules/unix/unix_terminal.tex
+++ b/lab-instructions/modules/unix/unix_terminal.tex
@@ -10,7 +10,7 @@
 	% Normala år skulle kompendiet fungera som referensmaterial för en introducerande ''datorstuga'' i introduktionsveckan, men höstterminen 2020 är denna inställd på grund av COVID-19. Därför får vi i år nöja oss med att läsa kompendiet som en förberedelse till laborationen.
 	\item Kompendiet \emph{Introduktion till LTH:s Linuxdatorer} får användas under laborationen, och hänvisas till i uppgifterna. I hänvisningarna förkortas namnet på  kompendiet till ILL.
 \end{Hemarbete}
-Länkar till det ovan refererade materialet finns på kurshemsidan under  ''Datorlaborationer'' om du inte har pappersversionerna av dem.
+Länkar till det ovan refererade materialet finns på kurshemsidan under  ''Operativsystem (dod)''.
 
 
 \subsection*{Kontrollfrågor}
