--- a/lectures/git/git.tex
+++ b/lectures/git/git.tex
@@ -384,7 +384,7 @@
 \begin{frame}
     \frametitle{Merge-situationer}
 
-    \ti{Vad kan vid merge?}
+    \ti{Vad kan hända vid merge?}
     \begin{itemize}
         \ii{fast-forward merge}
         \ii{merge commit}
