--- a/lectures/latex/latex_utils.sty
+++ b/lectures/latex/latex_utils.sty
@@ -15,50 +15,50 @@
 
 % Definierar en specifik stil för LaTeX-kodexempel
 \lstdefinestyle{latexex}{
-  language=[LaTeX]TeX,
-  morekeywords={begin,end,documentclass,usepackage,author,title,date,maketitle,frame,includegraphics,centering,tableofcontents,section,subsection,subsubsection,paragraph,subparagraph,itemize,enumerate,description,figure,table,tabular,centering,includegraphics,resizebox,rotatebox,subfigure,subtable,subfloat,subcaption,subref,ref,eqref,label,footnote,cite,printbibliography,printindex,printglossary,printglossaries},
-  breaklines=true,                   % Aktiverar automatisk radbrytning
-  breakatwhitespace=true,            % Radbrytning vid mellanslag
-  basicstyle=\ttfamily\scriptsize,   % Grundstil för koden
-  keywordstyle=\color{keywordcolor}, % Färg för nyckelord
-  commentstyle=\color{commentcolor}, % Färg för kommentarer
-  showstringspaces=false             % Visar inte mellanslag inom strängar
-  xleftmargin=0pt,                   % Ingen marginal till vänster
-  xrightmargin=0pt,                  % Ingen marginal till höger
-  breakautoindent=true,             % Ingen indragning vid radbrytning
-  breakindent=0pt,                   % Ingen indragning vid radbrytning
-  frame=none,                        % Ram runt koden
-  columns=fullflexible,              % Flexibel kolumnbredd
-  resetmargins=true,                 % Återställ marginaler
-  aboveskip=0pt,                     % Avstånd ovanför kod
-  belowskip=0pt,                     % Avstånd under kod
-  framexleftmargin=0pt,              % Ingen marginal till vänster om ramen
-  framesep=0pt,                      % Ingen marginal runt ramen
-  rulesep=0pt,                       % Ingen marginal runt regeln
-  keepspaces=true,                   % Behåll mellanslag
+    language=[LaTeX]TeX,
+    morekeywords={begin,end,documentclass,usepackage,author,title,date,maketitle,frame,includegraphics,centering,tableofcontents,section,subsection,subsubsection,paragraph,subparagraph,itemize,enumerate,description,figure,table,tabular,centering,includegraphics,resizebox,rotatebox,subfigure,subtable,subfloat,subcaption,subref,ref,eqref,label,footnote,cite,printbibliography,printindex,printglossary,printglossaries},
+    breaklines=true,                   % Aktiverar automatisk radbrytning
+    breakatwhitespace=true,            % Radbrytning vid mellanslag
+    basicstyle=\ttfamily\scriptsize,   % Grundstil för koden
+    keywordstyle=\color{keywordcolor}, % Färg för nyckelord
+    commentstyle=\color{commentcolor}, % Färg för kommentarer
+    showstringspaces=false             % Visar inte mellanslag inom strängar
+    xleftmargin=0pt,                   % Ingen marginal till vänster
+    xrightmargin=0pt,                  % Ingen marginal till höger
+    breakautoindent=true,             % Ingen indragning vid radbrytning
+    breakindent=0pt,                   % Ingen indragning vid radbrytning
+    frame=none,                        % Ram runt koden
+    columns=fullflexible,              % Flexibel kolumnbredd
+    resetmargins=true,                 % Återställ marginaler
+    aboveskip=0pt,                     % Avstånd ovanför kod
+    belowskip=0pt,                     % Avstånd under kod
+    framexleftmargin=0pt,              % Ingen marginal till vänster om ramen
+    framesep=0pt,                      % Ingen marginal runt ramen
+    rulesep=0pt,                       % Ingen marginal runt regeln
+    keepspaces=true,                   % Behåll mellanslag
 }
 \lstdefinestyle{scalaex}{
-  language=Scala,
-  morekeywords={val,var,def,object,class,trait,extends,with,override,import,package,implicit,case,match,if,else,while,for,return,throw,try,catch,finally,do,until,then,else,match,case,=>,_,:,=},
-  breaklines=true,                   % Aktiverar automatisk radbrytning
-  breakatwhitespace=true,            % Radbrytning vid mellanslag
-  basicstyle=\ttfamily\scriptsize,   % Grundstil för koden
-  keywordstyle=\color{keywordcolor}, % Färg för nyckelord
-  commentstyle=\color{commentcolor}, % Färg för kommentarer
-  showstringspaces=false             % Visar inte mellanslag inom strängar
-  xleftmargin=0pt,                   % Ingen marginal till vänster
-  xrightmargin=0pt,                  % Ingen marginal till höger
-  breakautoindent=true,             % Ingen indragning vid radbrytning
-  breakindent=0pt,                   % Ingen indragning vid radbrytning
-  frame=none,                        % Ram runt koden
-  columns=fullflexible,              % Flexibel kolumnbredd
-  resetmargins=true,                 % Återställ marginaler
-  aboveskip=0pt,                     % Avstånd ovanför kod
-  belowskip=0pt,                     % Avstånd under kod
-  framexleftmargin=0pt,              % Ingen marginal till vänster om ramen
-  framesep=0pt,                      % Ingen marginal runt ramen
-  rulesep=0pt,                       % Ingen marginal runt regeln
-  keepspaces=true,                   % Behåll mellanslag
+    language=Scala,
+    morekeywords={val,var,def,object,class,trait,extends,with,override,import,package,implicit,case,match,if,else,while,for,return,throw,try,catch,finally,do,until,then,else,match,case,=>,_,:,=},
+    breaklines=true,                   % Aktiverar automatisk radbrytning
+    breakatwhitespace=true,            % Radbrytning vid mellanslag
+    basicstyle=\ttfamily\scriptsize,   % Grundstil för koden
+    keywordstyle=\color{keywordcolor}, % Färg för nyckelord
+    commentstyle=\color{commentcolor}, % Färg för kommentarer
+    showstringspaces=false             % Visar inte mellanslag inom strängar
+    xleftmargin=0pt,                   % Ingen marginal till vänster
+    xrightmargin=0pt,                  % Ingen marginal till höger
+    breakautoindent=true,             % Ingen indragning vid radbrytning
+    breakindent=0pt,                   % Ingen indragning vid radbrytning
+    frame=none,                        % Ram runt koden
+    columns=fullflexible,              % Flexibel kolumnbredd
+    resetmargins=true,                 % Återställ marginaler
+    aboveskip=0pt,                     % Avstånd ovanför kod
+    belowskip=0pt,                     % Avstånd under kod
+    framexleftmargin=0pt,              % Ingen marginal till vänster om ramen
+    framesep=0pt,                      % Ingen marginal runt ramen
+    rulesep=0pt,                       % Ingen marginal runt regeln
+    keepspaces=true,                   % Behåll mellanslag
 }
 
 % Ny miljö för att visa LaTeX-kod och dess resultat sida vid sida
@@ -99,73 +99,79 @@
 
 
 \newenvironment{exlatex}{%
-  \only<1>{
-    \stepcounter{exlatexctr}% Stega upp räknaren
-  }
-  \VerbatimEnvironment
-  \begin{VerbatimOut}{ex/ex.\theexlatexctr}%
-    }{%
-  \end{VerbatimOut}
-  \noindent
-  \begin{minipage}[t]{.48\textwidth}%
-    \ti{{\tiny\textbf\texttt\sc KÄLLKOD:}}
-
-    \vspace{1mm}
-    \only<.->{
-      \lstinputlisting[style=latexex]{ex/ex.\theexlatexctr}% Rå LaTeX-kod
+    \only<1>{
+        \stepcounter{exlatexctr}% Stega upp räknaren
     }
-  \end{minipage}%
-  \hfill
-  \only<.->{%
-    \vrule
-  }
-  \hfill
-  \begin{minipage}[t]{.48\textwidth}%
-    \ts{{\tiny\textbf\texttt\sc RESULTAT:}}
+    \VerbatimEnvironment
+    \begin{VerbatimOut}{ex/ex.\theexlatexctr}%
+        }{%
+    \end{VerbatimOut}
+    \noindent
+    \begin{minipage}[t]{.48\textwidth}%
+        \ti{{\tiny\textbf\texttt\sc KÄLLKOD:}}
 
-    \vspace{1mm}
-    \only<+->{
-      {\footnotesize\input{ex/ex.\theexlatexctr}} % Kompilerad LaTeX-kod
+        \vspace{1mm}
+        \only<.->{
+            \lstinputlisting[style=latexex]{ex/ex.\theexlatexctr}% Rå LaTeX-kod
+        }
+    \end{minipage}%
+    \hfill
+    \only<.->{%
+        \vrule
     }
-  \end{minipage}%
+    \hfill
+    \begin{minipage}[t]{.48\textwidth}%
+        % Ändra fotnotssymboler till siffror i detta minipage
+        \makeatletter
+        \renewcommand{\thempfootnote}{\arabic{mpfootnote}}
+        \makeatother
+
+        \ts{{\tiny\textbf\texttt\sc RESULTAT:}}
+
+        \vspace{1mm}
+        \only<+->{
+            {\footnotesize\input{ex/ex.\theexlatexctr}} % Kompilerad LaTeX-kod
+        }
+
+    \end{minipage}%
 }
 
 % Define the new environments for manual examples
 % Environment to display the source code
 \newenvironment{exsrc}{%
-  \only<1>{
-    \stepcounter{exlatexctr}% Stega upp räknaren
-  }
-  \VerbatimEnvironment
-  \begin{VerbatimOut}{ex/ex.\theexlatexctr}%
-    }{%
-  \end{VerbatimOut}
-  \noindent
-  \begin{minipage}[t]{.48\textwidth}%
-    \ti{{\tiny\textbf\texttt\sc KÄLLKOD:}}
-
-    \vspace{1mm}
-    \only<.->{
-      \lstinputlisting[style=latexex]{ex/ex.\theexlatexctr}% Rå LaTeX-kod
+    \only<1>{
+        \stepcounter{exlatexctr}% Stega upp räknaren
     }
-  \end{minipage}%
-  \hfill
-  \only<.->{%
-    \vrule
-  }
-  \hfill
+    \VerbatimEnvironment
+    \begin{VerbatimOut}{ex/ex.\theexlatexctr}%
+        }{%
+    \end{VerbatimOut}
+    \noindent
+    \begin{minipage}[t]{.48\textwidth}%
+        \ti{{\tiny\textbf\texttt\sc KÄLLKOD:}}
+
+        \vspace{1mm}
+        \only<.->{
+            \lstinputlisting[style=latexex]{ex/ex.\theexlatexctr}% Rå LaTeX-kod
+        }
+    \end{minipage}%
+    \hfill
+    \only<.->{%
+        \vrule
+    }
+    \hfill
 }
 
 % Environment to display the result
 \newenvironment{exresult}{%
-  \begin{minipage}[t]{.48\textwidth}%
-    \ts{{\tiny\textbf\texttt\sc RESULTAT:}}
+    \begin{minipage}[t]{.48\textwidth}%
+        \ts{{\tiny\textbf\texttt\sc RESULTAT:}}
 
-    \vspace{1mm}
-    \begin{envi}
-    \begin{footnotesize}
-}{%
-    \end{footnotesize}
-    \end{envi}
-  \end{minipage}%
+        \vspace{1mm}
+        \begin{envi}
+            \begin{footnotesize}
+                }{%
+            \end{footnotesize}
+        \end{envi}
+    \end{minipage}%
 }
