fix: committing images, which I apparently only had locally *facepalm*

--- a/lectures/latex/latex.tex
+++ b/lectures/latex/latex.tex
@@ -773,13 +773,17 @@ a_{n1} & a_{n2} & \cdots & a_{nn} \\
   \blankline
 
   \vspace{2mm}
-  \begin{exsrc}
-\includegraphics[height=40mm]
+  \begin{exlatex}
+  \includegraphics[height=30mm]
     {images/bild.pdf}
-  \end{exsrc}
-  \begin{exresult}
-\includegraphics[height=30mm]{images/enkelmodell.pdf}
-  \end{exresult}
+  \end{exlatex}
+%   \begin{exsrc}
+% \includegraphics[height=40mm]
+%     {images/bild.pdf}
+%   \end{exsrc}
+%   \begin{exresult}
+% \includegraphics[height=30mm]{images/enkelmodell.pdf}
+%   \end{exresult}
 
 \end{frame}
 
@@ -789,25 +793,35 @@ a_{n1} & a_{n2} & \cdots & a_{nn} \\
 
   \ti{Slå in bilder i en \texttt{figure}-omgivningen, för att lägga till en bildtext och en etikett.}
 
-  \begin{exsrc}
+    \begin{exlatex}
 \begin{figure}
   \centering
-  \includegraphics[height=40mm]
-      {images/bild.pdf}
+  \includegraphics[height=30mm]
+      {images/enkelmodell.pdf}
   \caption{Exempelbild}
   \label{fig:exempelbild}
 \end{figure}
 Från text kan vi nu referera till figur~\ref{fig:exempelbild}.
-  \end{exsrc}
-  \begin{exresult}
-\begin{figure}
-  \centering
-  \includegraphics[height=30mm]{images/enkelmodell.pdf}
-  \caption{Exempelbild}
-  \label{fig:exempelbild2}
-\end{figure}
-Från text kan vi nu referera till figur~\ref{fig:exempelbild2}.
-  \end{exresult}
+    \end{exlatex}
+%   \begin{exsrc}
+% \begin{figure}
+%   \centering
+%   \includegraphics[height=40mm]
+%       {images/bild.pdf}
+%   \caption{Exempelbild}
+%   \label{fig:exempelbild}
+% \end{figure}
+% Från text kan vi nu referera till figur~\ref{fig:exempelbild}.
+%   \end{exsrc}
+%   \begin{exresult}
+% \begin{figure}
+%   \centering
+%   \includegraphics[height=30mm]{images/enkelmodell.pdf}
+%   \caption{Exempelbild}
+%   \label{fig:exempelbild2}
+% \end{figure}
+% Från text kan vi nu referera till figur~\ref{fig:exempelbild2}.
+%   \end{exresult}
 
 \end{frame}
 
